@@ -8,6 +8,7 @@
 #ifndef SkWebpEncoder_DEFINED
 #define SkWebpEncoder_DEFINED
 
+#include "include/core/SkSpan.h"
 #include "include/encode/SkEncoder.h"
 
 class SkWStream;
@@ -43,6 +44,22 @@ namespace SkWebpEncoder {
      *  Returns true on success.  Returns false on an invalid or unsupported |src|.
      */
     SK_API bool Encode(SkWStream* dst, const SkPixmap& src, const Options& options);
+
+    /**
+     *  Encode the |src| frames to the |dst| stream.
+     *  |options| may be used to control the encoding behavior.
+     *
+     *  The size of the first frame will be used as the canvas size. If any other frame does
+     *  not match the canvas size, this is an error.
+     *
+     *  Returns true on success.  Returns false on an invalid or unsupported |src|.
+     *
+     *  Note: libwebp API also supports set background color, loop limit and customize
+     *  lossy/lossless for each frame. These could be added later as needed.
+     */
+    SK_API bool EncodeAnimated(SkWStream* dst,
+                               SkSpan<const SkEncoder::Frame> src,
+                               const Options& options);
 } // namespace SkWebpEncoder
 
 #endif
