@@ -16,7 +16,9 @@
 #include "include/core/SkImageInfo.h"
 #include "include/core/SkPixmap.h"
 #include "include/core/SkRefCnt.h"
+#include "include/core/SkSpan.h"
 #include "include/core/SkStream.h"
+#include "include/encode/SkEncoder.h"
 #include "include/encode/SkWebpEncoder.h"
 #include "include/private/SkImageInfoPriv.h"
 #include "include/private/SkTemplates.h"
@@ -25,6 +27,7 @@
 
 #include <cstddef>
 #include <cstdint>
+#include <memory>
 
 // A WebP encoder only, on top of (subset of) libwebp
 // For more information on WebP image format, and libwebp library, see:
@@ -48,7 +51,10 @@ static int stream_writer(const uint8_t* data, size_t data_size,
 
 using WebPPictureImportProc = int (*) (WebPPicture* picture, const uint8_t* pixels, int stride);
 
-bool SkWebpEncoder::Encode(SkWStream* stream, const SkPixmap& pixmap, const Options& opts) {
+static bool preprocess_webp_picture(WebPPicture* pic,
+                                    WebPConfig* webp_config,
+                                    const SkPixmap& pixmap,
+                                    const SkWebpEncoder::Options& opts) {
     if (!SkPixmapIsValid(pixmap)) {
         return false;
     }
@@ -63,40 +69,24 @@ bool SkWebpEncoder::Encode(SkWStream* stream, const SkPixmap& pixmap, const Opti
         return false;
     }
 
-    WebPConfig webp_config;
-    if (!WebPConfigPreset(&webp_config, WEBP_PRESET_DEFAULT, opts.fQuality)) {
-        return false;
-    }
-
-    WebPPicture pic;
-    WebPPictureInit(&pic);
-    SkAutoTCallVProc<WebPPicture, WebPPictureFree> autoPic(&pic);
-    pic.width = pixmap.width();
-    pic.height = pixmap.height();
-    pic.writer = stream_writer;
+    pic->width = pixmap.width();
+    pic->height = pixmap.height();
 
     // Set compression, method, and pixel format.
     // libwebp recommends using BGRA for lossless and YUV for lossy.
     // The choices of |webp_config.method| currently just match Chrome's defaults.  We
     // could potentially expose this decision to the client.
-    if (Compression::kLossy == opts.fCompression) {
-        webp_config.lossless = 0;
+    if (SkWebpEncoder::Compression::kLossy == opts.fCompression) {
+        webp_config->lossless = 0;
 #ifndef SK_WEBP_ENCODER_USE_DEFAULT_METHOD
-        webp_config.method = 3;
+        webp_config->method = 3;
 #endif
-        pic.use_argb = 0;
+        pic->use_argb = 0;
     } else {
-        webp_config.lossless = 1;
-        webp_config.method = 0;
-        pic.use_argb = 1;
+        webp_config->lossless = 1;
+        webp_config->method = 0;
+        pic->use_argb = 1;
     }
-
-    // If there is no need to embed an ICC profile, we write directly to the input stream.
-    // Otherwise, we will first encode to |tmp| and use a mux to add the ICC chunk.  libwebp
-    // forces us to have an encoded image before we can add a profile.
-    sk_sp<SkData> icc = icc_from_color_space(pixmap.info());
-    SkDynamicMemoryWStream tmp;
-    pic.custom_ptr = icc ? (void*)&tmp : (void*)stream;
 
     {
         const SkColorType ct = pixmap.colorType();
@@ -105,26 +95,61 @@ bool SkWebpEncoder::Encode(SkWStream* stream, const SkPixmap& pixmap, const Opti
         SkBitmap tmpBm;
         WebPPictureImportProc importProc = nullptr;
         const SkPixmap* src = &pixmap;
-        if      (           ct ==  kRGB_888x_SkColorType) { importProc = WebPPictureImportRGBX; }
-        else if (!premul && ct == kRGBA_8888_SkColorType) { importProc = WebPPictureImportRGBA; }
+        if (ct == kRGB_888x_SkColorType) {
+            importProc = WebPPictureImportRGBX;
+        } else if (!premul && ct == kRGBA_8888_SkColorType) {
+            importProc = WebPPictureImportRGBA;
+        }
 #ifdef WebPPictureImportBGRA
-        else if (!premul && ct == kBGRA_8888_SkColorType) { importProc = WebPPictureImportBGRA; }
+        else if (!premul && ct == kBGRA_8888_SkColorType) {
+            importProc = WebPPictureImportBGRA;
+        }
 #endif
         else {
             importProc = WebPPictureImportRGBA;
-            auto info = pixmap.info().makeColorType(kRGBA_8888_SkColorType)
-                                     .makeAlphaType(kUnpremul_SkAlphaType);
-            if (!tmpBm.tryAllocPixels(info)
-                    || !pixmap.readPixels(tmpBm.info(), tmpBm.getPixels(), tmpBm.rowBytes())) {
+            auto info = pixmap.info()
+                                .makeColorType(kRGBA_8888_SkColorType)
+                                .makeAlphaType(kUnpremul_SkAlphaType);
+            if (!tmpBm.tryAllocPixels(info) ||
+                !pixmap.readPixels(tmpBm.info(), tmpBm.getPixels(), tmpBm.rowBytes())) {
                 return false;
             }
             src = &tmpBm.pixmap();
         }
 
-        if (!importProc(&pic, reinterpret_cast<const uint8_t*>(src->addr()), src->rowBytes())) {
+        if (!importProc(pic, reinterpret_cast<const uint8_t*>(src->addr()), src->rowBytes())) {
             return false;
         }
     }
+
+    return true;
+}
+
+bool SkWebpEncoder::Encode(SkWStream* stream, const SkPixmap& pixmap, const Options& opts) {
+    if (!stream) {
+        return false;
+    }
+
+    WebPConfig webp_config;
+    if (!WebPConfigPreset(&webp_config, WEBP_PRESET_DEFAULT, opts.fQuality)) {
+        return false;
+    }
+
+    WebPPicture pic;
+    WebPPictureInit(&pic);
+    SkAutoTCallVProc<WebPPicture, WebPPictureFree> autoPic(&pic);
+
+    if (!preprocess_webp_picture(&pic, &webp_config, pixmap, opts)) {
+        return false;
+    }
+
+    // If there is no need to embed an ICC profile, we write directly to the input stream.
+    // Otherwise, we will first encode to |tmp| and use a mux to add the ICC chunk.  libwebp
+    // forces us to have an encoded image before we can add a profile.
+    sk_sp<SkData> icc = icc_from_color_space(pixmap.info());
+    SkDynamicMemoryWStream tmp;
+    pic.custom_ptr = icc ? (void*)&tmp : (void*)stream;
+    pic.writer = stream_writer;
 
     if (!WebPEncode(&webp_config, &pic)) {
         return false;
@@ -154,6 +179,70 @@ bool SkWebpEncoder::Encode(SkWStream* stream, const SkPixmap& pixmap, const Opti
     }
 
     return true;
+}
+
+bool SkWebpEncoder::EncodeAnimated(SkWStream* stream,
+                                   SkSpan<const SkEncoder::Frame> frames,
+                                   const Options& opts) {
+    if (!stream || !frames.size()) {
+        return false;
+    }
+
+    const int canvasWidth = frames.front().pixmap.width();
+    const int canvasHeight = frames.front().pixmap.height();
+    int timestamp = 0;
+
+    std::unique_ptr<WebPAnimEncoder, void (*)(WebPAnimEncoder*)> enc(
+            WebPAnimEncoderNew(canvasWidth, canvasHeight, nullptr), WebPAnimEncoderDelete);
+    if (!enc) {
+        return false;
+    }
+
+    for (const auto& frame : frames) {
+        const auto& pixmap = frame.pixmap;
+
+        if (pixmap.width() != canvasWidth || pixmap.height() != canvasHeight) {
+            return false;
+        }
+
+        WebPConfig webp_config;
+        if (!WebPConfigPreset(&webp_config, WEBP_PRESET_DEFAULT, opts.fQuality)) {
+            return false;
+        }
+
+        WebPPicture pic;
+        WebPPictureInit(&pic);
+        SkAutoTCallVProc<WebPPicture, WebPPictureFree> autoPic(&pic);
+
+        if (!preprocess_webp_picture(&pic, &webp_config, pixmap, opts)) {
+            return false;
+        }
+
+        if (!WebPEncode(&webp_config, &pic)) {
+            return false;
+        }
+
+        if (!WebPAnimEncoderAdd(enc.get(), &pic, timestamp, &webp_config)) {
+            return false;
+        }
+
+        timestamp += frame.duration;
+    }
+
+    // Add a last fake frame to signal the last duration.
+    if (!WebPAnimEncoderAdd(enc.get(), nullptr, timestamp, nullptr)) {
+        return false;
+    }
+
+    WebPData assembled;
+    SkAutoTCallVProc<WebPData, WebPDataClear> autoWebPData(&assembled);
+    if (!WebPAnimEncoderAssemble(enc.get(), &assembled)) {
+        return false;
+    }
+
+    enc.reset();
+
+    return stream->write(assembled.bytes, assembled.size);
 }
 
 #endif
